# OrbitSense

./: .gitignore  ARCHITECTURE.md  DATA_SOURCES.md  DETECTION_METHODS.md  ETHICS_AND_SCOPE.md  EVENT_TAXONOMY.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: daily.yml  weekly.yml
events/: 2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json  feed.json  globe.json  pipeline_summary.json
ledger/: 2026-06.parquet  2026-07.parquet
orbitsense/: __init__.py  alerts.py  analyst.py  catalog.py  cli.py  detector.py  herald.py  llm.py  pipeline.py  propagator.py  report.py  screener.py
reports/: state-of-the-orbits-2026-07-13.json  state-of-the-orbits-2026-07-13.md
scripts/: benchmark_socrates.py  phase0_iss_history.py  phase0_iss_proof.py  phase0_propagation_bench.py  validate_iss_detector.py
site/: .gitignore  next.config.ts  package-lock.json  package.json
site/app/: globals.css  layout.tsx  page.tsx
site/app/api/chat/: route.ts
site/app/chat/: page.tsx
site/app/components/: EventCardView.tsx  Globe.tsx
site/app/globe/: page.tsx
site/app/lib/: feed.ts  globe.ts
site/public/: feed.json  globe.json
tests/: test_alerts.py  test_analyst.py  test_catalog.py  test_detector.py  test_propagator.py  test_report.py  test_screener.py
