[project]
name = "orbitsense"
version = "0.1.0"
description = "A space domain awareness copilot that watches every satellite and explains what it sees"
requires-python = ">=3.11"
dependencies = [
    "sgp4>=2.23",
    "skyfield>=1.48",
    "numpy>=1.26",
    "pandas>=2.2",
    "ruptures>=1.1",
    "scipy>=1.11",
    "duckdb>=1.0",
    "pyarrow>=16.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "matplotlib>=3.8"]

[project.scripts]
orbitsense = "orbitsense.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["orbitsense"]
